@@ -209,6 +209,21 @@
       </filterchain>
     </copy>
   </target>
+  
+  <target name="documentation-online" description="Generate a link to the online documentation"
+      depends="define-solr-javadoc-url">
+    <xslt in="${ant.file}" out="${javadoc-online.dir}/index.html" style="site/online-link.xsl" force="true">
+      <outputproperty name="method" value="html"/>
+      <outputproperty name="version" value="4.0"/>
+      <outputproperty name="encoding" value="UTF-8"/>
+      <outputproperty name="indent" value="yes"/>
+      <param name="version" expression="${version}"/>
+      <param name="solrJavadocUrl" expression="${solr.javadoc.url}"/>
+    </xslt>
+    <copy todir="${javadoc-online.dir}">
+      <fileset dir="site/assets" includes="**/solr.svg"/>
+    </copy>
+  </target>
 
   <target name="process-webpages" depends="define-lucene-javadoc-url,resolve-pegdown">
     <makeurl property="process-webpages.buildfiles" separator="|">
@@ -455,7 +470,7 @@
   <target name="prepare-release" depends="prepare-release-no-sign, sign-artifacts"/>
  
   <!-- make a distribution -->
-  <target name="package" depends="package-src-tgz,create-package,-dist-changes,-dist-keys"/>
+  <target name="package" depends="package-src-tgz,create-package,documentation,-dist-changes,-dist-keys"/>
 
   <!-- copy changes/ to the release folder -->
   <target name="-dist-changes">
@@ -545,7 +560,7 @@
       <target name="init-dist"/>
       <target name="dist"/>
       <target name="server"/>
-      <target name="documentation"/>
+      <target name="documentation-online"/>
     </antcall>
     <mkdir dir="${dest}/${fullnamever}"/>
     <delete includeemptydirs="true">
@@ -586,7 +601,7 @@
                             dist/solrj-lib/*
                             dist/test-framework/**"
                   excludes="**/*.tgz **/*.zip **/*.md5 **/*src*.jar **/*docs*.jar **/*.sha1" />
-      <tarfileset dir="${javadoc.dir}"
+      <tarfileset dir="${javadoc-online.dir}"
                   prefix="${fullnamever}/docs" />
     </tar>
     <make-checksums file="${package.dir}/${fullnamever}.tgz"/>
